--- a/views/newsletter.html
+++ b/views/newsletter.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="icon" type="image/jpg" href="assets/img/favicon.jpg">
+        <link rel="icon" type="image/jpg" href="../assets/img/favicon.jpg">
         <title>Veterinaria San Blas</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
-        <link rel="stylesheet" href="assets/css/styles.css">
+        <link rel="stylesheet" href="../assets/css/styles.css">
         <!-- Enlace a Google Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +22,7 @@
                 
                 <!-- Logo -->
                 <a class="navbar-brand">
-                    <img id="logo" src="assets/img/logo.png" alt="Logo" width="60px">
+                    <img id="logo" src="../assets/img/logo.png" alt="Logo" width="60px">
                 </a>
 
                 <!-- Botón del toggler -->
@@ -34,7 +34,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">    
                     <ul class="navbar-nav">
                         <li class="nav-item p-3">
-                            <a class="nav-link" href="">Inicio</a>
+                            <a class="nav-link" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item p-3">
                             <a class="nav-link" href="">Servicios</a>
@@ -47,7 +47,7 @@
                         </li>                                            
                         <ul class="navbar-nav">
                             <li class="nav-item p-3">
-                                <a class="nav-link nav-link-box" href="views/iniciar_sesion.html">Iniciar sesión</a>
+                                <a class="nav-link nav-link-box" href="../views/iniciar_sesion.html">Iniciar sesión</a>
                             </li>
                             <li class="nav-item p-3">
                                 <a class="nav-link nav-link-box" href="">Registrarse</a>
@@ -76,19 +76,19 @@
                 <!-- Contenido de la diapositiva -->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img id="imagen_carrusel" src="assets/img/header1.jpg" alt="header1" class="d-block" style="width:100%">
+                        <img id="imagen_carrusel" src="../assets/img/header1.jpg" alt="header1" class="d-block" style="width:100%">
                     </div>
                     <div class="carousel-item">
-                        <img id="imagen_carrusel" src="assets/img/header2.jpg" alt="header2" class="d-block" style="width:100%">
+                        <img id="imagen_carrusel" src="../assets/img/header2.jpg" alt="header2" class="d-block" style="width:100%">
                     </div>
                     <div class="carousel-item">
-                        <img id="imagen_carrusel" src="assets/img/header3.jpg" alt="header3" class="d-block" style="width:100%">
+                        <img id="imagen_carrusel" src="../assets/img/header3.jpg" alt="header3" class="d-block" style="width:100%">
                     </div>
                     <div class="carousel-item">
-                        <img id="imagen_carrusel" src="assets/img/header4.jpg" alt="header4" class="d-block" style="width:100%">
+                        <img id="imagen_carrusel" src="../assets/img/header4.jpg" alt="header4" class="d-block" style="width:100%">
                     </div>
                     <div class="carousel-item">
-                        <img id="imagen_carrusel" src="assets/img/header5.jpeg" alt="header5" class="d-block" style="width:100%">
+                        <img id="imagen_carrusel" src="../assets/img/header5.jpeg" alt="header5" class="d-block" style="width:100%">
                     </div>
                 </div>
           
@@ -105,20 +105,31 @@
     
     <!-- Contenido de la página -->
     <div>
-        <content id="bienvenida">
-            
-                <div class="container">
-                
+        <content id="newsletter">
+
+                <div class="container">                
                     <div class="mx-auto text-justify" style="max-width: 600px;">
 
-                        <!-- Contenedor sombreado tipo card-->
+                        <!-- Formulario para recibir newsletter -->
                         <div class="card shadow-lg p-5">
-                            <h2>Veterinaria San Blas</h2>
+                            <h2>Suscribir Newsletter</h2>
                             <hr><br>
-                            <p>Nos enorgullecemos de ofrecer una amplia gama de servicios veterinarios, desde consultas y chequeos de rutina hasta procedimientos quirúrgicos menores y cuidados preventivos.</p>
-                            <p>Entendemos que cada mascota es un miembro invaluable de la familia, y tratamos a cada uno de nuestros pacientes con la misma dedicación y cariño que tú les das en casa.</p>
-                            <p>Gracias por confiar en Veterinaria San Blas. Esperamos poder servirte a ti y a tu mascota con el más alto nivel de atención y cuidado.</p>
+                            
+                            <p>Suscríbete a nuestro newsletter para recibir las últimas noticias, promociones exclusivas y consejos útiles para el cuidado de tu mascota.</p>
+                            <br>
+                            <form action="#" method="POST">
+                                <div class="mb-3">
+                                    <label for="username" class="form-label">Nombre Completo</label>
+                                    <input type="text" class="form-control" placeholder="Ingresa tu nombre completo" id="nombre_completo" name="nombre_completo" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="password" class="form-label">Correo Electrónico</label>
+                                    <input type="email" class="form-control" placeholder="Ingrese su email" id="correo_electronico" name="correo_electronico" required>
+                                </div>
+                                <button type="submit" class="btn btn-primary" onclick="mostrarAlertaExitoNewsletter()">Suscribirse</button>
+                            </form>
                         </div>
+                        
                     </div>
 
                 </div>            
@@ -140,7 +151,7 @@
                 <!-- Enlace para suscribirse al newsletter -->
             <div>
             <div>
-                <a href="views/newsletter.html">¡Suscríbete a nuestro newsletter!</a>
+                <a href="../views/newsletter.html">¡Suscríbete a nuestro newsletter!</a>
             </div>
             <hr>
             </div>
@@ -152,7 +163,7 @@
     <!-- JavaScript-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script src="assets/js/script.js"></script>        
+    <script src="../assets/js/script.js"></script>        
 
   </body>
 </html>
