--- a/views/mascotas.html
+++ b/views/mascotas.html
@@ -35,26 +35,30 @@
                     <ul class="navbar-nav">
                         <li class="nav-item p-3">
                             <a class="nav-link" href="../index.html">Inicio</a>
-                        </li>
+                        </li>                       
                         <li class="nav-item p-3">
-                            <a class="nav-link" href="">Reservar</a>
-                        </li>                                                                                       
+                            <a class="nav-link" href="../views/contacto.html">Reservar</a>
+                        </li>
                         <li class="nav-item p-3">
                             <a class="nav-link" href="../views/contacto.html">Vacunatorio</a>
-                        </li>
+                        </li>                                                                     
                         <li class="nav-item p-3">
-                            <a class="nav-link" href="../views/contacto.html">Contacto</a>
-                        </li>                                             
+                            <a class="nav-link" href="../views/contacto.html">Comentarios</a>
+                        </li>                                            
                         <ul class="navbar-nav">
                             <li class="nav-item p-3">
-                                <a class="nav-link nav-link-box" href="../views/iniciar_sesion.html">Iniciar sesión</a>
-                            </li>
-                            <li class="nav-item p-3">
-                                <a class="nav-link nav-link-box" href="../views/registro.html">Registrarse</a>
-                            </li>
+                                <a class="nav-link nav-link-box" href="../index.html">Cerrar Sesión</a>
+                            </li>                            
                         </ul>
                     </ul>
                 </div>
+
+                <!-- Imagen genérica de usuario y nombre -->                
+                <div class="nav-item p-3">
+                    <img src="../assets/img/generic_user.jpg" alt="User Icon" class="rounded-circle me-2" width="40">
+                    <span>María López</span>
+                </div>                        
+
             </div>
         </nav>
     </div>    
@@ -110,32 +114,30 @@
                 <div class="container">                
                     <div class="mx-auto text-justify" style="max-width: 600px;">
 
-                        <!-- Formulario para recibir newsletter -->
+                        <!-- Listado de mascotas -->
                         <div class="card shadow-lg p-5">
-                            <h2>Suscribir Newsletter</h2>
+                            <h2>Tus Mascotas Registradas</h2>
                             <hr><br>
-                            
-                            <p>Suscríbete a nuestro newsletter para recibir las últimas noticias, promociones exclusivas y consejos útiles para el cuidado de tu mascota.</p>
+                                                                                
+                            <!-- Listado -->
+                            <div class="list-group">
+                                <a href="#" class="list-group-item list-group-item-action">                                    
+                                        <h5 class="mb-1">Tommy</h5>
+                                        <p class="mb-1">Especie: Perro</p>
+                                        <p class="mb-1">Raza: Labrador Retriever</p>
+                                        <p class="mb-1">Edad: 4 años</p>                                                                                                                                                                                                                  
+                                </a>
+                                <a href="#" class="list-group-item list-group-item-action">
+                                    <h5 class="mb-1">Luna</h5>
+                                        <p class="mb-1">Especie: Gato</p>
+                                        <p class="mb-1">Raza: Siamese</p>
+                                        <p class="mb-1">Edad: 2 años</p>                                                                          
+                                </a>                                
+                            </div>
                             <br>
-                            <form action="#" method="POST">
-                                <div class="mb-3">
-                                    <label for="username" class="form-label">Nombres</label>
-                                    <input type="text" class="form-control" placeholder="Ingresa tu nombre completo" id="nombre_completo" name="nombre_completo" required>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="username" class="form-label">Apellidos</label>
-                                    <input type="text" class="form-control" placeholder="Ingresa tu nombre completo" id="nombre_completo" name="nombre_completo" required>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="password" class="form-label">Correo Electrónico</label>
-                                    <input type="email" class="form-control" placeholder="Ingrese su email" id="correo_electronico" name="correo_electronico" required>
-                                </div>
-                                <button type="submit" class="btn btn-primary" onclick="mostrarAlertaExitoNewsletter()">Suscribirse</button>
-                            </form>
-                        </div>
-                        
+                            <a href="registro_mascota.html" class="btn btn-primary">Agregar Nueva Mascota</a>
+                        </div>                        
                     </div>
-
                 </div>            
         </content>
     </div>
@@ -167,7 +169,7 @@
     <!-- JavaScript-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script src="../assets/js/script.js"></script>        
+    <script src="assets/js/script.js"></script>        
 
   </body>
 </html>
