--- a/views/contacto.html
+++ b/views/contacto.html
@@ -38,13 +38,13 @@
                         </li>
                         <li class="nav-item p-3">
                             <a class="nav-link" href="">Reservar</a>
-                        </li>                                                                                       
+                        </li>                         
                         <li class="nav-item p-3">
-                            <a class="nav-link" href="../views/contacto.html">Vacunatorio</a>
-                        </li>
+                            <a class="nav-link" href="">Vacunatorio</a>
+                        </li>                                                                  
                         <li class="nav-item p-3">
-                            <a class="nav-link" href="../views/contacto.html">Contacto</a>
-                        </li>                                             
+                            <a class="nav-link" href="">Contacto</a>
+                        </li>                                            
                         <ul class="navbar-nav">
                             <li class="nav-item p-3">
                                 <a class="nav-link nav-link-box" href="../views/iniciar_sesion.html">Iniciar sesión</a>
@@ -110,27 +110,30 @@
                 <div class="container">                
                     <div class="mx-auto text-justify" style="max-width: 600px;">
 
-                        <!-- Formulario para recibir newsletter -->
+                        <!-- Formulario de contacto -->
                         <div class="card shadow-lg p-5">
-                            <h2>Suscribir Newsletter</h2>
+                            <h2>Formulario de Contacto</h2>
                             <hr><br>
-                            
-                            <p>Suscríbete a nuestro newsletter para recibir las últimas noticias, promociones exclusivas y consejos útiles para el cuidado de tu mascota.</p>
+                            <p>Completa el formulario y pronto nos pondremos en contacto.</p>
                             <br>
                             <form action="#" method="POST">
                                 <div class="mb-3">
-                                    <label for="username" class="form-label">Nombres</label>
-                                    <input type="text" class="form-control" placeholder="Ingresa tu nombre completo" id="nombre_completo" name="nombre_completo" required>
+                                    <label for="nombres" class="form-label">Nombres</label>
+                                    <input type="text" class="form-control" placeholder="Ingresa tus nombres" id="nombres" name="nombres" required>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="username" class="form-label">Apellidos</label>
-                                    <input type="text" class="form-control" placeholder="Ingresa tu nombre completo" id="nombre_completo" name="nombre_completo" required>
+                                    <label for="apellidos" class="form-label">Apellidos</label>
+                                    <input type="text" class="form-control" placeholder="Ingresa tus apellidos" id="apellidos" name="apellidos" required>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="password" class="form-label">Correo Electrónico</label>
-                                    <input type="email" class="form-control" placeholder="Ingrese su email" id="correo_electronico" name="correo_electronico" required>
+                                    <label for="email" class="form-label">Correo Electrónico</label>
+                                    <input type="email" class="form-control" placeholder="Ingrese su email" id="email" name="email" required>
                                 </div>
-                                <button type="submit" class="btn btn-primary" onclick="mostrarAlertaExitoNewsletter()">Suscribirse</button>
+                                <div class="mb-3">
+                                    <label for="comentarios" class="form-label">Comentarios</label>
+                                    <textarea class="form-control" placeholder="Escribe tus comentarios aquí" id="comentarios" name="comentarios" rows="4" required></textarea>
+                                </div>
+                                <button type="submit" class="btn btn-primary" onclick="mostrarAlertaExitoContacto()">Enviar</button>
                             </form>
                         </div>
                         
