--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -35,26 +35,30 @@
                     <ul class="navbar-nav">
                         <li class="nav-item p-3">
                             <a class="nav-link" href="../index.html">Inicio</a>
-                        </li>
+                        </li>                       
                         <li class="nav-item p-3">
-                            <a class="nav-link" href="">Reservar</a>
-                        </li>                                                                                       
+                            <a class="nav-link" href="../views/contacto.html">Reservar</a>
+                        </li>
                         <li class="nav-item p-3">
                             <a class="nav-link" href="../views/contacto.html">Vacunatorio</a>
-                        </li>
+                        </li>                                                                     
                         <li class="nav-item p-3">
-                            <a class="nav-link" href="../views/contacto.html">Contacto</a>
-                        </li>                                             
+                            <a class="nav-link" href="../views/contacto.html">Comentarios</a>
+                        </li>                                            
                         <ul class="navbar-nav">
                             <li class="nav-item p-3">
-                                <a class="nav-link nav-link-box" href="../views/iniciar_sesion.html">Iniciar sesión</a>
-                            </li>
-                            <li class="nav-item p-3">
-                                <a class="nav-link nav-link-box" href="../views/registro.html">Registrarse</a>
-                            </li>
+                                <a class="nav-link nav-link-box" href="../index.html">Cerrar Sesión</a>
+                            </li>                            
                         </ul>
                     </ul>
                 </div>
+
+                <!-- Imagen genérica de usuario y nombre -->                
+                <div class="nav-item p-3">
+                    <img src="../assets/img/generic_user.jpg" alt="User Icon" class="rounded-circle me-2" width="40">
+                    <span>María López</span>
+                </div>                        
+
             </div>
         </nav>
     </div>    
@@ -105,37 +109,43 @@
     
     <!-- Contenido de la página -->
     <div>
-        <content id="newsletter">
-
-                <div class="container">                
-                    <div class="mx-auto text-justify" style="max-width: 600px;">
-
-                        <!-- Formulario para recibir newsletter -->
-                        <div class="card shadow-lg p-5">
-                            <h2>Suscribir Newsletter</h2>
-                            <hr><br>
-                            
-                            <p>Suscríbete a nuestro newsletter para recibir las últimas noticias, promociones exclusivas y consejos útiles para el cuidado de tu mascota.</p>
-                            <br>
-                            <form action="#" method="POST">
-                                <div class="mb-3">
-                                    <label for="username" class="form-label">Nombres</label>
-                                    <input type="text" class="form-control" placeholder="Ingresa tu nombre completo" id="nombre_completo" name="nombre_completo" required>
+        <content id="dashboard">            
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-4 mb-4">                            
+                            <a href="mascotas.html" class="no-underline">
+                                <!-- Contenedor sombreado tipo card-->
+                                <div class="card shadow-lg p-5 custom-card" style="background-color: #7264C9;">
+                                    <h2>Tus Mascotas</h2>
+                                    <hr><br>
+                                    <img src="../assets/img/card3.jpg" class="card-img custom-width" alt="Card3">
                                 </div>
-                                <div class="mb-3">
-                                    <label for="username" class="form-label">Apellidos</label>
-                                    <input type="text" class="form-control" placeholder="Ingresa tu nombre completo" id="nombre_completo" name="nombre_completo" required>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="password" class="form-label">Correo Electrónico</label>
-                                    <input type="email" class="form-control" placeholder="Ingrese su email" id="correo_electronico" name="correo_electronico" required>
-                                </div>
-                                <button type="submit" class="btn btn-primary" onclick="mostrarAlertaExitoNewsletter()">Suscribirse</button>
-                            </form>
+                            </a>
                         </div>
-                        
-                    </div>
+                        <div class="col-lg-4 mb-4">                            
+                                <!-- Contenedor sombreado tipo card-->
+                                <div class="card shadow-lg p-5">
+                                    <h2>¡Bienvenid@ María!</h2>
+                                    <hr><br>
+                                    <p>¿Qué deseas hacer hoy?</p>
+                                    <p><a href="">Administra tus agendamientos</a></p>
+                                    <p><a href="">Actualiza tu información</a></p>
+                                    <p><a href="">Deja tus opiniones y comentarios</a></p>
+                                    <br>                                    
+                                </div>                            
+                        </div>
+                        <div class="col-lg-4 mb-4">
+                            <a href="views/iniciar_sesion.html" class="no-underline">
 
+                                <!-- Contenedor sombreado tipo card-->
+                                <div class="card shadow-lg p-5 custom-card" style="background-color: #87cf56;">
+                                    <h2>Tu Perfil</h2>
+                                    <hr><br>
+                                    <img src="../assets/img/card4.jpg" class="card-img custom-width" alt="Card4">
+                                </div>
+                            </a>
+                        </div>                                       
+                    </div>                    
                 </div>            
         </content>
     </div>
@@ -167,7 +177,7 @@
     <!-- JavaScript-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script src="../assets/js/script.js"></script>        
+    <script src="assets/js/script.js"></script>        
 
   </body>
 </html>
