--- a/views/iniciar_sesion.html
+++ b/views/iniciar_sesion.html
@@ -37,20 +37,20 @@
                             <a class="nav-link" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item p-3">
-                            <a class="nav-link" href="">Servicios</a>
+                            <a class="nav-link" href="../views/iniciar_sesion.html">Reservar</a>
                         </li>                         
                         <li class="nav-item p-3">
-                            <a class="nav-link" href="">Nosotros</a>
+                            <a class="nav-link" href="../views/iniciar_sesion.html">Vacunatorio</a>
                         </li>                                                                  
                         <li class="nav-item p-3">
-                            <a class="nav-link" href="">Contacto</a>
+                            <a class="nav-link" href="../views/contacto.html">Contacto</a>
                         </li>                                            
                         <ul class="navbar-nav">
                             <li class="nav-item p-3">
                                 <a class="nav-link nav-link-box" href="">Iniciar sesión</a>
                             </li>
                             <li class="nav-item p-3">
-                                <a class="nav-link nav-link-box" href="">Registrarse</a>
+                                <a class="nav-link nav-link-box" href="../views/registro.html">Registrarse</a>
                             </li>
                         </ul>
                     </ul>
@@ -115,7 +115,9 @@
                             <h2>Inicio de Sesión</h2>
                             <hr><br>
                             <!-- Formulario de inicio de sesión -->
-                            <form action="#" method="POST">
+                            <!-- <form action="#" method="POST"> -->
+                            
+                            <form>
                                 <div class="mb-3">
                                     <label for="username" class="form-label">Nombre de Usuario</label>
                                     <input type="text" class="form-control" placeholder="Ingrese nombre de usuario" id="username" name="username" required>
@@ -124,12 +126,12 @@
                                     <label for="password" class="form-label">Contraseña</label>
                                     <input type="password" class="form-control" placeholder="Ingrese contraseña" id="password" name="password" required>
                                 </div>
-                                <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
+                                <a href="dashboard.html" class="btn btn-primary">Iniciar Sesión</a>
                             </form>
                 
                             <!-- Enlace para registro -->
                             <div class="mt-3">
-                                ¿No estás registrado? <a href="#">Regístrate aquí</a>
+                                ¿No estás registrado? <a href="../views/registro.html">Regístrate aquí</a>
                             </div>
                         </div>
                         
