--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -106,11 +106,25 @@
             </div>
         </header>
     </div>
+
+    <!-- Breadcrumbs -->
+    <div class="container">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="../index.html" class="breadcrumb-link">Inicio</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Dashboard</li>
+            </ol>
+        </nav>
+    </div>
     
+
+
     <!-- Contenido de la página -->
     <div>
+
         <content id="dashboard">            
-                <div class="container">
+                <div class="container">                    
+
                     <div class="row">
                         <div class="col-lg-4 mb-4">                            
                             <a href="mascotas.html" class="no-underline">
