--- a/views/contacto.html
+++ b/views/contacto.html
@@ -102,10 +102,20 @@
             </div>
         </header>
     </div>
+
+    <!-- Breadcrumbs -->
+    <div class="container">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="../index.html" class="breadcrumb-link">Inicio</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Contacto</li>
+            </ol>
+        </nav>
+    </div>
     
     <!-- Contenido de la página -->
     <div>
-        <content id="newsletter">
+        <content id="contacto">
 
                 <div class="container">                
                     <div class="mx-auto text-justify" style="max-width: 600px;">
@@ -158,7 +168,8 @@
                 <!-- Enlace para suscribirse al newsletter -->
             <div>
             <div>
-                <a href="../views/newsletter.html">¡Suscríbete a nuestro newsletter!</a>
+                <a href="../views/contacto.html">Formulario de Contacto |</a>
+                <a href="../views/newsletter.html">Suscríbete a nuestro Newsletter</a>
             </div>
             <hr>
             </div>
