--- a/views/mascotas.html
+++ b/views/mascotas.html
@@ -106,10 +106,21 @@
             </div>
         </header>
     </div>
+
+    <!-- Breadcrumbs -->
+    <div class="container">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="../index.html" class="breadcrumb-link">Inicio</a></li>
+                <li class="breadcrumb-item"><a href="dashboard.html" class="breadcrumb-link">Dashboard</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Mascotas</li>
+            </ol>
+        </nav>
+    </div>
     
     <!-- Contenido de la página -->
     <div>
-        <content id="newsletter">
+        <content id="listado_mascotas">
 
                 <div class="container">                
                     <div class="mx-auto text-justify" style="max-width: 600px;">
@@ -155,12 +166,13 @@
                 </div>
                 <br><br>
                 <!-- Enlace para suscribirse al newsletter -->
-            <div>
-            <div>
-                <a href="../views/newsletter.html">¡Suscríbete a nuestro newsletter!</a>
-            </div>
-            <hr>
-            </div>
+                <div>
+                    <div>
+                        <a href="../views/contacto.html">Formulario de Contacto | </a>
+                        <a href="../views/newsletter.html">Suscríbete a nuestro newsletter</a>
+                    </div>
+                <hr>
+                </div>
                 <span>© 2024 Veterinaria San Blas</span>
             </div>
         </footer>
