--- a/views/registro.html
+++ b/views/registro.html
@@ -102,6 +102,16 @@
             </div>
         </header>
     </div>
+
+    <!-- Breadcrumbs -->
+    <div class="container">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="../index.html" class="breadcrumb-link">Inicio</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Registro</li>
+            </ol>
+        </nav>
+    </div>
     
     <!-- Contenido de la página -->
     <div>
@@ -193,9 +203,10 @@
                 <br><br>
                 <!-- Enlace para suscribirse al newsletter -->
             <div>
-            <div>
-                <a href="../views/newsletter.html">¡Suscríbete a nuestro newsletter!</a>
-            </div>
+                <div>
+                    <a href="../views/contacto.html">Formulario de Contacto |</a>
+                    <a href="../views/newsletter.html">Suscríbete a nuestro newsletter</a>
+                </div>
             <hr>
             </div>
                 <span>© 2024 Veterinaria San Blas</span>
