--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -37,13 +37,13 @@
                             <a class="nav-link" href="../index.html">Inicio</a>
                         </li>                       
                         <li class="nav-item p-3">
-                            <a class="nav-link" href="../views/contacto.html">Reservar</a>
+                            <a class="nav-link" href="reserva_hora.html">Reservar</a>
                         </li>
                         <li class="nav-item p-3">
-                            <a class="nav-link" href="../views/contacto.html">Vacunatorio</a>
+                            <a class="nav-link" href="vacunatorio.html">Vacunatorio</a>
                         </li>                                                                     
                         <li class="nav-item p-3">
-                            <a class="nav-link" href="../views/contacto.html">Comentarios</a>
+                            <a class="nav-link" href="">Comentarios</a>
                         </li>                                            
                         <ul class="navbar-nav">
                             <li class="nav-item p-3">
@@ -54,10 +54,12 @@
                 </div>
 
                 <!-- Imagen genérica de usuario y nombre -->                
-                <div class="nav-item p-3">
-                    <img src="../assets/img/generic_user.jpg" alt="User Icon" class="rounded-circle me-2" width="40">
-                    <span>María López</span>
-                </div>                        
+                <a href="perfil_usuario.html" class="no-underline">
+                    <div class="nav-item p-3">
+                        <img src="../assets/img/generic_user.jpg" alt="User Icon" class="rounded me-2" width="40">
+                        <span>María López</span>
+                    </div>                    
+                </a>                         
 
             </div>
         </nav>
@@ -142,14 +144,15 @@
                                     <h2>¡Bienvenid@ María!</h2>
                                     <hr><br>
                                     <p>¿Qué deseas hacer hoy?</p>
-                                    <p><a href="">Administra tus agendamientos</a></p>
-                                    <p><a href="">Actualiza tu información</a></p>
-                                    <p><a href="">Deja tus opiniones y comentarios</a></p>
-                                    <br>                                    
+                                    <p><a href="">Reservar cita</a></p>
+                                    <p><a href="reserva_hora.html">Administrar agendamientos</a></p>
+                                    <p><a href="vacunatorio.html">Ir al vacunatorio</a></p>
+                                    <p><a href="">Dejar opiniones y comentarios</a></p>
+                                                                       
                                 </div>                            
                         </div>
                         <div class="col-lg-4 mb-4">
-                            <a href="views/iniciar_sesion.html" class="no-underline">
+                            <a href="perfil_usuario.html" class="no-underline">
 
                                 <!-- Contenedor sombreado tipo card-->
                                 <div class="card shadow-lg p-5 custom-card" style="background-color: #87cf56;">
@@ -179,7 +182,8 @@
                 <!-- Enlace para suscribirse al newsletter -->
             <div>
             <div>
-                <a href="../views/newsletter.html">¡Suscríbete a nuestro newsletter!</a>
+                <a href="../views/contacto.html">Formulario de Contacto |</a>
+                <a href="../views/newsletter.html">Suscríbete a nuestro Newsletter</a>
             </div>
             <hr>
             </div>
