--- a/views/registro_mascota.html
+++ b/views/registro_mascota.html
@@ -106,6 +106,18 @@
             </div>
         </header>
     </div>
+
+    <!-- Breadcrumbs -->
+    <div class="container">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="../index.html" class="breadcrumb-link">Inicio</a></li>
+                <li class="breadcrumb-item"><a href="dashboard.html" class="breadcrumb-link">Dashboard</a></li>
+                <li class="breadcrumb-item"><a href="mascotas.html" class="breadcrumb-link">Mascotas</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Registro mascota</li>
+            </ol>
+        </nav>
+    </div>
     
     <!-- Contenido de la página -->
     <div>
@@ -176,12 +188,13 @@
                 </div>
                 <br><br>
                 <!-- Enlace para suscribirse al newsletter -->
-            <div>
-            <div>
-                <a href="../views/newsletter.html">¡Suscríbete a nuestro newsletter!</a>
-            </div>
-            <hr>
-            </div>
+                <div>
+                    <div>
+                        <a href="../views/contacto.html">Formulario de Contacto | </a>
+                        <a href="../views/newsletter.html">Suscríbete a nuestro newsletter</a>
+                    </div>
+                <hr>
+                </div>
                 <span>© 2024 Veterinaria San Blas</span>
             </div>
         </footer>
