--- a/views/reserva_hora.html
+++ b/views/reserva_hora.html
@@ -35,26 +35,31 @@
                     <ul class="navbar-nav">
                         <li class="nav-item p-3">
                             <a class="nav-link" href="../index.html">Inicio</a>
+                        </li>                       
+                        <li class="nav-item p-3">
+                            <a class="nav-link" href="reserva_hora.html">Reservar</a>
                         </li>
                         <li class="nav-item p-3">
-                            <a class="nav-link" href="../views/iniciar_sesion.html">Reservar</a>
-                        </li>                         
+                            <a class="nav-link" href="vacunatorio.html">Vacunatorio</a>
+                        </li>                                                                     
                         <li class="nav-item p-3">
-                            <a class="nav-link" href="../views/iniciar_sesion.html">Vacunatorio</a>
-                        </li>                                                                  
-                        <li class="nav-item p-3">
-                            <a class="nav-link" href="../views/contacto.html">Contacto</a>
+                            <a class="nav-link" href="">Comentarios</a>
                         </li>                                            
                         <ul class="navbar-nav">
                             <li class="nav-item p-3">
-                                <a class="nav-link nav-link-box" href="">Iniciar sesión</a>
-                            </li>
-                            <li class="nav-item p-3">
-                                <a class="nav-link nav-link-box" href="../views/registro.html">Registrarse</a>
-                            </li>
+                                <a class="nav-link nav-link-box" href="../index.html">Cerrar Sesión</a>
+                            </li>                            
                         </ul>
                     </ul>
                 </div>
+
+                <!-- Imagen genérica de usuario y nombre -->                
+                <a href="perfil_usuario.html" class="no-underline">
+                    <div class="nav-item p-3">
+                        <img src="../assets/img/generic_user.jpg" alt="User Icon" class="rounded me-2" width="40">
+                        <span>María López</span>
+                    </div>                    
+                </a>  
             </div>
         </nav>
     </div>    
@@ -102,42 +107,77 @@
             </div>
         </header>
     </div>
+
+    <!-- Breadcrumbs -->
+    <div class="container">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="../index.html" class="breadcrumb-link">Inicio</a></li>
+                <li class="breadcrumb-item"><a href="dashboard.html" class="breadcrumb-link">Dashboard</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Reserva Cita</li>
+            </ol>
+        </nav>
+    </div>
     
     <!-- Contenido de la página -->
     <div>
-        <content id="inicio_sesion">
+        <content id="reserva">
 
                 <div class="container">                
                     <div class="mx-auto text-justify" style="max-width: 600px;">
 
-                        <!-- Contenedor sombreado tipo card-->
+                        <!-- Formulario de contacto -->
                         <div class="card shadow-lg p-5">
-                            <h2>Inicio de Sesión</h2>
+                            <h2>Agendamiento de Cita</h2>
                             <hr><br>
-                            <!-- Formulario de inicio de sesión -->
-                            <!-- <form action="#" method="POST"> -->
-                            
-                            <form>
-                                <div class="mb-3">
-                                    <label for="username" class="form-label">Nombre de Usuario</label>
-                                    <input type="text" class="form-control" placeholder="Ingrese nombre de usuario" id="username" name="username" required>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="password" class="form-label">Contraseña</label>
-                                    <input type="password" class="form-control" placeholder="Ingrese contraseña" id="password" name="password" required>
-                                </div>
-                                <a href="dashboard.html" class="btn btn-primary">Iniciar Sesión</a>
-                            </form>
-                
-                            <!-- Enlace para registro -->
-                            <div class="mt-3">
-                                ¿No estás registrado? <a href="../views/registro.html">Regístrate aquí</a>
-                            </div>
-                        </div>
-                        
-                    </div>
+                            <p>Selecciona la información requerida para la cita</p>                        
+                            <br>
 
-                </div>            
+                            <form action="#" method="POST">
+                        
+                                <!-- Selector de Mascota -->
+                                <div class="mb-3">
+                                    <label for="pet" class="form-label">Mascota</label>
+                                    <select id="pet" class="form-control" required>
+                                        <option value="" disabled selected>Seleccione mascota</option>
+                                        <option value="Tommy">Tommy</option>
+                                        <option value="Luna">Luna</option>                                             
+                                    </select>
+                                </div>
+
+                                <!-- Selector de Tipo de Agendamiento -->
+                                <div class="mb-3">
+                                    <label for="type" class="form-label">Tipo de agendamiento</label>
+                                    <select id="type" class="form-control" required>
+                                        <option value="" disabled selected>Seleccione tipo</option>
+                                        <option value="General">General</option>
+                                        <option value="Vacuna">Vacuna</option>
+                                        <option value="Preventiva">Preventiva</option>
+                                        <option value="Certificado">Certificado</option>  
+                                        <option value="Destartraje">Destartraje</option>
+                                        <option value="Tratamiento o curación">Tratamiento o curación</option>
+                                    </select>
+                                </div>
+                        
+                                <!-- Selector de Fecha -->
+                                <div class="mb-3">
+                                    <label for="date" class="form-label">Fecha</label>
+                                    <input type="date" id="date" class="form-control" required>
+                                </div>
+                        
+                                <!-- Selector de Hora -->
+                                <div class="mb-3">
+                                    <label for="time" class="form-label">Hora</label>
+                                    <input type="time" id="time" class="form-control" requiered>
+                                </div>
+                                <div>
+                                    <button type="submit" class="btn btn-primary">Agendar</button>                                                                
+                                </div>
+                                
+                            </form>
+                        </div>                        
+                    </div>
+                </div>                
         </content>
     </div>
 
@@ -169,7 +209,7 @@
     <!-- JavaScript-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script src="assets/js/script.js"></script>        
+    <script src="../assets/js/script.js"></script>        
 
   </body>
 </html>
